Estado global consistente entre corridas. Falla en el generador de rutas.